# cpp-offline-judge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bytes.h  coj.h  exception.h  file.h  pipe.h  process.h
include/coj/: checker.h  compiler.h  file_descriptor.h  file_io.h  process.h  runner.h
src/: CMakeLists.txt  checker.cpp  compiler.cpp  file.cpp  pipe.cpp  process.cpp  runner.cpp
test/: CMakeLists.txt
test/include/: utils.h
test/src/: CMakeLists.txt  checker_test.cpp  compiler_test.cpp  exception.cpp  file.cpp  file_descriptor_test.cpp  file_io_test.cpp  pipe.cpp  process.cpp  process_test.cpp  runner_test.cpp
